--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 name: Mahdi Ghadamyari's Blog
 
 # Short bio or description (displayed in the header)
-description: Web Developer from Canada
+description: Web Developer
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: https://avatars1.githubusercontent.com/u/2684673?s=460&u=5665f2c5fdf5d291c6bbf8d521fb79f0550c4ebf&v=4
@@ -21,12 +21,12 @@ footer-links:
   email:
   facebook:
   flickr:
-  github: barryclark/jekyll-now
+  github: i0
   instagram:
   linkedin:
   pinterest:
   rss: # just type anything here for a working RSS icon
-  twitter: jekyllrb
+  twitter: 
   stackoverflow: # your stackoverflow profile, e.g. "users/50476/bart-kiers"
   youtube: # channel/<your_long_string> or user/<user-name>
   googleplus: # anything in your profile username that comes after plus.google.com/
